force-app/main/default/objects/SessionTimeoutSettings__c/SessionTimeoutSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Session Timeout Settings</label>
</CustomObject>