force-app/main/default/objects/SessionTimeoutSettings__c/fields/Continue_Button_Color__c.field-meta.xml
<CustomField>
    <fullName>Continue_Button_Color__c</fullName>
    <defaultValue>&apos;#3AC2FF&apos;</defaultValue>
    <description>Defines the background color of the Continue button.</description>
    <inlineHelpText>Enter a valid CSS color (e.g., hex #FF0000, red, rgb(255,0,0)) for the Continue button background</inlineHelpText>
    <label>Continue Button Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>