force-app/main/default/objects/SessionTimeoutSettings__c/fields/Countdown_Color__c.field-meta.xml
<CustomField>
    <fullName>Countdown_Color__c</fullName>
    <defaultValue>&apos;#EA001E&apos;</defaultValue>
    <description>Defines the text color for the countdown timer.</description>
    <inlineHelpText>Enter a valid CSS (e.g., hex #FF0000, red, rgb(255,0,0)) color for the countdown timer text (e.g., red for warning).</inlineHelpText>
    <label>Countdown Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>