force-app/main/default/objects/SessionTimeoutSettings__c/fields/Inactivity_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Inactivity_Timeout__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Idle time before showing the timeout modal (in seconds).</description>
    <inlineHelpText>Enter the number of seconds after which the modal should appear due to inactivity.</inlineHelpText>
    <label>Inactivity Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>