force-app/main/default/objects/SessionTimeoutSettings__c/fields/Logo_Url__c.field-meta.xml
<CustomField>
    <fullName>Logo_Url__c</fullName>
    <description>URL for the logo image to display in the timeout modal</description>
    <inlineHelpText>Overrides the default logo from Custom Metadata. Supports:
• Web URLs (https://)
• Static Resources (/resource/Name)
• Relative paths for Experience Cloud (/img/logo.png)
Note: URL must be accessible to all users. For secure external URLs, ensure CORS is configured.</inlineHelpText>
    <label>Logo Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>