force-app/main/default/objects/SessionTimeoutSettings__c/fields/Logout_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Logout_Button_Label__c</fullName>
    <defaultValue>&apos;Log Out Now&apos;</defaultValue>
    <description>Text displayed on the Logout button.</description>
    <inlineHelpText>Enter the label that should appear on the Logout button (e.g., &quot;Sign Out&quot;, &quot;End Session&quot;).</inlineHelpText>
    <label>Logout Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>