force-app/main/default/objects/SessionTimeoutSettings__c/fields/Logout_Countdown__c.field-meta.xml
<CustomField>
    <fullName>Logout_Countdown__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Time until auto-logout after inactivity (in seconds).</description>
    <inlineHelpText>Set the number of seconds between showing the modal and automatic logout.</inlineHelpText>
    <label>Logout Countdown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>