force-app/main/default/objects/SessionTimeoutSettings__c/fields/Modal_Border_Radius__c.field-meta.xml
<CustomField>
    <fullName>Modal_Border_Radius__c</fullName>
    <defaultValue>&apos;8px&apos;</defaultValue>
    <description>Border radius for the modal corners.</description>
    <inlineHelpText>Define the corner roundness of the modal (e.g., 4px, 8px).</inlineHelpText>
    <label>Modal Border Radius</label>
    <length>50</length>
    <type>Text</type>
</CustomField>