force-app/main/default/objects/SessionTimeoutSettings__c/fields/Modal_Footer_Color__c.field-meta.xml
<CustomField>
    <fullName>Modal_Footer_Color__c</fullName>
    <defaultValue>&apos;#25A4DD&apos;</defaultValue>
    <description>Defines the background color of the modal footer.</description>
    <inlineHelpText>Enter a valid CSS color (e.g., hex #FF0000, red, rgb(255,0,0)) for the footer section of the modal.</inlineHelpText>
    <label>Modal Footer Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>