force-app/main/default/objects/SessionTimeoutSettings__c/fields/Modal_Header_Color__c.field-meta.xml
<CustomField>
    <fullName>Modal_Header_Color__c</fullName>
    <defaultValue>&apos;#FFFFFF&apos;</defaultValue>
    <description>Background color of the modal header.</description>
    <inlineHelpText>Enter a valid CSS color (e.g., hex #FF0000, red, rgb(255,0,0)) for the header section of the modal.</inlineHelpText>
    <label>Modal Header Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>