force-app/main/default/objects/SessionTimeoutSettings__c/fields/Modal_Width__c.field-meta.xml
<CustomField>
    <fullName>Modal_Width__c</fullName>
    <defaultValue>&apos;500px&apos;</defaultValue>
    <description>Width of the modal window.</description>
    <inlineHelpText>Enter a valid CSS width (e.g., 400px, 50%) to set the modal width.</inlineHelpText>
    <label>Modal Width</label>
    <length>50</length>
    <type>Text</type>
</CustomField>