force-app/main/default/objects/SessionTimeoutSettings__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Higher values take precedence. Default=50, Overrides=100, Fallbacks=0.</description>
    <inlineHelpText>Set to 100 for forced overrides, 50 for standard defaults, or 0 for last-resort fallbacks.</inlineHelpText>
    <label>Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>