force-app/main/default/objects/SessionTimeoutSettings__c/fields/Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>Redirect_URL__c</fullName>
    <description>The URL to redirect to when action is set to &apos;redirect&apos;.</description>
    <inlineHelpText>Enter a complete absolute URL including the protocol (https:// or http://). Example: &apos;https://yourdomain.com/custom-logout&apos;. For best results, avoid using relative URLs (like &apos;/home&apos;).</inlineHelpText>
    <label>Redirect URL</label>
    <type>Url</type>
</CustomField>