force-app/main/default/objects/SessionTimeoutSettings__c/fields/Show_Countdown__c.field-meta.xml
<CustomField>
    <fullName>Show_Countdown__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to display the countdown timer in the modal.</description>
    <inlineHelpText>Select this checkbox to show the countdown timer in the modal during inactivity.</inlineHelpText>
    <label>Show Countdown</label>
    <type>Checkbox</type>
</CustomField>